--- a/.github/workflows/main-build-test-deploy.yml
+++ b/.github/workflows/main-build-test-deploy.yml
@@ -17,22 +17,20 @@ jobs:
           java-version: '16'
       - name: "Create property files"
         run: |
-            'cd /src/main/resources'
-            'touch application.properties'
-            'echo "server.servlet.context-path=/api/v1" >> application.properties'
-            'echo "spring.datasource.url=jdbc:mysql://db/adb-attractions-service" >> application.properties'
-            'echo "spring.datasource.username=${{ secrets.DB_USERNAME }}" >> application.properties'
-            'echo "spring.datasource.password=${{ secrets.DB_PASSWORD }}" >> application.properties'
-            'echo "spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver" >> application.properties'
-            'echo "spring.jpa.hibernate.ddl-auto=update" >> application.properties'
-            'echo "spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect" >> application.properties'
+            'touch ./src/main/resources/application.properties'
+            'echo "server.servlet.context-path=/api/v1" >> ./src/main/resources/application.properties'
+            'echo "spring.datasource.url=jdbc:mysql://db/adb-attractions-service" >> ./src/main/resources/application.properties'
+            'echo "spring.datasource.username=${{ secrets.DB_USERNAME }}" >> ./src/main/resources/application.properties'
+            'echo "spring.datasource.password=${{ secrets.DB_PASSWORD }}" >> ./src/main/resources/application.properties'
+            'echo "spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver" >> ./src/main/resources/application.properties'
+            'echo "spring.jpa.hibernate.ddl-auto=update" >> ./src/main/resources/application.properties'
+            'echo "spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect" >> ./src/main/resources/application.properties'
 
-            'cd /src/test/resources'
-            'touch application.properties'
-            'echo "spring.datasource.driver-class-name=org.h2.Driver" >> application.properties'
-            'echo "spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1" >> application.properties'
-            'echo "spring.datasource.username=root" >> application.properties'
-            'echo "spring.datasource.password=" >> application.properties'
+            'touch ./src/test/resources/application.properties'
+            'echo "spring.datasource.driver-class-name=org.h2.Driver" >> ./src/test/resources/application.properties'
+            'echo "spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1" >> ./src/test/resources/application.properties'
+            'echo "spring.datasource.username=root" >> ./src/test/resources/application.properties'
+            'echo "spring.datasource.password=" >> ./src/test/resources/application.properties'
       - name: "Run maven commands"
         run: |
             'mvnw clean install'
