--- a/.github/workflows/main-build-test-deploy.yml
+++ b/.github/workflows/main-build-test-deploy.yml
@@ -17,7 +17,7 @@ jobs:
           java-version: '16'
       - name: "Create property files"
         run: |
-            'touch ./src/main/resources/application.properties'
+            'mkdir -p ./src/main/resources/application.properties && touch ./src/main/resources/application.properties'
             'echo "server.servlet.context-path=/api/v1" >> ./src/main/resources/application.properties'
             'echo "spring.datasource.url=jdbc:mysql://db/adb-attractions-service" >> ./src/main/resources/application.properties'
             'echo "spring.datasource.username=${{ secrets.DB_USERNAME }}" >> ./src/main/resources/application.properties'
@@ -26,7 +26,7 @@ jobs:
             'echo "spring.jpa.hibernate.ddl-auto=update" >> ./src/main/resources/application.properties'
             'echo "spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect" >> ./src/main/resources/application.properties'
 
-            'touch ./src/test/resources/application.properties'
+            'mkdir -p ./src/test/resources/application.properties && touch ./src/test/resources/application.properties'
             'echo "spring.datasource.driver-class-name=org.h2.Driver" >> ./src/test/resources/application.properties'
             'echo "spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1" >> ./src/test/resources/application.properties'
             'echo "spring.datasource.username=root" >> ./src/test/resources/application.properties'
