--- a/.github/workflows/main-build-test-deploy.yml
+++ b/.github/workflows/main-build-test-deploy.yml
@@ -15,22 +15,27 @@ jobs:
         with:
           distribution: 'zulu'
           java-version: '16'
-      - name: "Create property files"
-        run: |
-            'mkdir -p ./src/main/resources/application.properties && touch ./src/main/resources/application.properties'
-            'echo "server.servlet.context-path=/api/v1" >> ./src/main/resources/application.properties'
-            'echo "spring.datasource.url=jdbc:mysql://db/adb-attractions-service" >> ./src/main/resources/application.properties'
-            'echo "spring.datasource.username=${{ secrets.DB_USERNAME }}" >> ./src/main/resources/application.properties'
-            'echo "spring.datasource.password=${{ secrets.DB_PASSWORD }}" >> ./src/main/resources/application.properties'
-            'echo "spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver" >> ./src/main/resources/application.properties'
-            'echo "spring.jpa.hibernate.ddl-auto=update" >> ./src/main/resources/application.properties'
-            'echo "spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect" >> ./src/main/resources/application.properties'
-
-            'mkdir -p ./src/test/resources/application.properties && touch ./src/test/resources/application.properties'
-            'echo "spring.datasource.driver-class-name=org.h2.Driver" >> ./src/test/resources/application.properties'
-            'echo "spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1" >> ./src/test/resources/application.properties'
-            'echo "spring.datasource.username=root" >> ./src/test/resources/application.properties'
-            'echo "spring.datasource.password=" >> ./src/test/resources/application.properties'
+      - name: "Create main property file"
+        uses: 'finnp/create-file-action@master'
+        env:
+          FILE_NAME: 'src/main/resources/application.properties'
+          FILE_DATA: 
+            server.servlet.context-path=/api/v1\n
+            spring.datasource.url=jdbc:mysql://127.0.0.1:3306/adb-attractions-service\n
+            spring.datasource.username=${{ secrets.DB_USERNAME }}\n
+            spring.datasource.password=${{ secrets.DB_PASSWORD }}\n
+            spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver\n
+            spring.jpa.hibernate.ddl-auto=update\n
+            spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect\n
+      - name: "Create test property file"
+        uses: 'finnp/create-file-action@master'
+        env:
+          FILE_NAME: 'src/test/resources/application.properties'
+          FILE_DATA:
+            spring.datasource.driver-class-name=org.h2.Driver\n
+            spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1\n
+            spring.datasource.username=root\n
+            spring.datasource.password=\n
       - name: "Run maven commands"
         run: |
             'mvnw clean install'
