--- a/.github/workflows/main-build-test-deploy.yml
+++ b/.github/workflows/main-build-test-deploy.yml
@@ -16,19 +16,19 @@ jobs:
           distribution: 'zulu'
           java-version: '16'
       - name: "Create main property file"
-        uses: 'finnp/create-file-action@master'
-        env:
-          FILE_NAME: 'src/main/resources/application.properties'
-          FILE_DATA: 
-            server.servlet.context-path=/api/v1\n
-            spring.datasource.url=jdbc:mysql://127.0.0.1:3306/adb-attractions-service\n
-            spring.datasource.username=${{ secrets.DB_USERNAME }}\n
-            spring.datasource.password=${{ secrets.DB_PASSWORD }}\n
-            spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver\n
-            spring.jpa.hibernate.ddl-auto=update\n
-            spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect\n
-      - name: "Create test property file"
         run: 'ls -a'
+        # uses: 'finnp/create-file-action@master'
+        # env:
+        #   FILE_NAME: 'src/main/resources/application.properties'
+        #   FILE_DATA: 
+        #     server.servlet.context-path=/api/v1\n
+        #     spring.datasource.url=jdbc:mysql://127.0.0.1:3306/adb-attractions-service\n
+        #     spring.datasource.username=${{ secrets.DB_USERNAME }}\n
+        #     spring.datasource.password=${{ secrets.DB_PASSWORD }}\n
+        #     spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver\n
+        #     spring.jpa.hibernate.ddl-auto=update\n
+        #     spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect\n
+      - name: "Create test property file"
         uses: 'finnp/create-file-action@master'
         env:
           FILE_NAME: 'src/test/resources/application.properties'
