--- a/.github/workflows/main-build-test-deploy.yml
+++ b/.github/workflows/main-build-test-deploy.yml
@@ -18,22 +18,22 @@ jobs:
       - name: "Create main property file"
         run: |
           mkdir -p ./src/main/resources
-          touch ./src/main/resources/application.properties
-        # uses: 'finnp/create-file-action@master'
-        # env:
-        #   FILE_NAME: 'src/main/resources/application.properties'
-        #   FILE_DATA: 
-        #     server.servlet.context-path=/api/v1\n
-        #     spring.datasource.url=jdbc:mysql://127.0.0.1:3306/adb-attractions-service\n
-        #     spring.datasource.username=${{ secrets.DB_USERNAME }}\n
-        #     spring.datasource.password=${{ secrets.DB_PASSWORD }}\n
-        #     spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver\n
-        #     spring.jpa.hibernate.ddl-auto=update\n
-        #     spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect\n
+          touch ./src/main/resources/application-docker.properties
+          
+          echo "spring.jpa.hibernate.ddl-auto=update" >> ./src/main/resources/application-docker.properties
+          echo "spring.datasource.url=jdbc:mysql://db:3306/adb-attractions-service" >> ./src/main/resources/application-docker.properties
+          echo "spring.datasource.username=${{ secrets.DB_USERNAME }}" >> ./src/main/resources/application-docker.properties
+          echo "spring.datasource.password=${{ secrets.DB_PASSWORD }}" >> ./src/main/resources/application-docker.properties
+          echo "spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver" >> ./src/main/resources/application-docker.properties
+
+          echo "#Wait 30seconds for database connection" >> ./src/main/resources/application-docker.properties
+          echo "spring.datasource.hikari.minimum-idle= 0" >> ./src/main/resources/application-docker.properties
+          echo "spring.datasource.hikari.initialization-fail-timeout= -1" >> ./src/main/resources/application-docker.properties
+          echo "spring.sql.init.continue-on-error= true" >> ./src/main/resources/application-docker.properties
       - name: "Run maven commands"
         run: |
-            'mvnw clean install'
-            'mvnw spring-boot:test'
+            './mvnw clean install'
+            './mvnw spring-boot:test'
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Login to DockerHub
