--- a/.github/workflows/main-build-test-deploy.yml
+++ b/.github/workflows/main-build-test-deploy.yml
@@ -31,10 +31,7 @@ jobs:
           echo "spring.datasource.hikari.initialization-fail-timeout= -1" >> ./src/main/resources/application-docker.properties
           echo "spring.sql.init.continue-on-error= true" >> ./src/main/resources/application-docker.properties
       - name: "Run maven commands"
-        run: |
-          'ls -a'
-          './mvnw clean install'
-          './mvnw spring-boot:test'
+        run: 'ls -a'
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Login to DockerHub
