--- a/.github/workflows/main-build-test-deploy.yml
+++ b/.github/workflows/main-build-test-deploy.yml
@@ -8,13 +8,15 @@ jobs:
   build:
     runs-on: "ubuntu-latest"
     steps:
+      # Action setup
       - name: "Go to this branche"
         uses: 'actions/checkout@v2'
       - name: "Set up JDK 11"
-        uses: 'actions/setup-java@v2'
+        uses: 'actions/setup-java@v1'
         with:
           distribution: 'zulu'
           java-version: '16'
+      # Environment setup
       - name: "Create main property file"
         run: |
           mkdir -p ./src/main/resources
@@ -30,12 +32,15 @@ jobs:
           echo "spring.datasource.hikari.minimum-idle= 0" >> ./src/main/resources/application-docker.properties
           echo "spring.datasource.hikari.initialization-fail-timeout= -1" >> ./src/main/resources/application-docker.properties
           echo "spring.sql.init.continue-on-error= true" >> ./src/main/resources/application-docker.properties
-      - name: "Run maven commands"
+      # Testing
+      - name: "Check if the application builds and run all tests"
         run: |
-          'mvnw clean install'
-          'mvnw spring-boot:test'
+          'mvn clean install'
+          'mvn spring-boot:test'
+      # Build docker image
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v1
+      # Deploy image to dockerhub
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
