--- a/.github/workflows/main-build-test-deploy.yml
+++ b/.github/workflows/main-build-test-deploy.yml
@@ -33,14 +33,10 @@ jobs:
           echo "spring.datasource.hikari.initialization-fail-timeout= -1" >> ./src/main/resources/application-docker.properties
           echo "spring.sql.init.continue-on-error= true" >> ./src/main/resources/application-docker.properties
       # Testing
-      - name: "Check if the application builds"	
-        uses: 'qcastel/github-actions-maven/actions/maven@master'
-        with:
-          maven-args: 'clean install'
-      - name: "Run all tests"	
-        uses: 'qcastel/github-actions-maven/actions/maven@master'
-        with:
-          maven-args: 'spring-boot:test'
+      - name: "Setup docker build"
+        run: 'docker compose up --build -d'
+      - name: "Run tests"
+        run: 'docker compose exec -e SPRING_PROFILES_ACTIVE='docker' adb-service-attractions ./mvnw test'
       # Build docker image
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v1
