--- a/.github/workflows/main-build-test-deploy.yml
+++ b/.github/workflows/main-build-test-deploy.yml
@@ -34,9 +34,9 @@ jobs:
           echo "spring.sql.init.continue-on-error= true" >> ./src/main/resources/application-docker.properties
       # Testing
       - name: "Setup docker build"
-        run: 'docker compose up --build -d'
+        run: docker compose up --build -d
       - name: "Run tests"
-        run: 'docker compose exec -e SPRING_PROFILES_ACTIVE='docker' adb-service-attractions ./mvnw test'
+        run: docker compose exec -e SPRING_PROFILES_ACTIVE='docker' adb-service-attractions ./mvnw test
       # Build docker image
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v1
