--- a/.github/workflows/main-build-test-deploy.yml
+++ b/.github/workflows/main-build-test-deploy.yml
@@ -16,6 +16,8 @@ jobs:
         with:
           distribution: 'zulu'
           java-version: '16'
+      - name: "Permit CI to use mvnw"
+        run: chmod +x mvnw
       # Environment setup
       - name: "Create main property file"
         run: |
