--- a/.github/workflows/main-build-test-deploy.yml
+++ b/.github/workflows/main-build-test-deploy.yml
@@ -38,7 +38,7 @@ jobs:
       - name: "Build application"
         run: ./mvnw clean install
       - name: "Run tests"
-        run: ./mvnw spring-boot:test
+        run: ./mvnw test
       # Build docker image
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v1
