--- a/.github/workflows/main-build-test-deploy.yml
+++ b/.github/workflows/main-build-test-deploy.yml
@@ -54,3 +54,4 @@ jobs:
             export COMPOSE_DOCKER_CLI_BUILD=0
             docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/adb-service-attractions:latest .
             docker push ${{ secrets.DOCKERHUB_USERNAME }}/adb-service-attractions:latest
+      # TODO:: Update server deployment through SSH call
