--- a/.github/workflows/main-build-test-deploy.yml
+++ b/.github/workflows/main-build-test-deploy.yml
@@ -24,6 +24,7 @@ jobs:
           mkdir -p ./src/main/resources
           touch ./src/main/resources/application-docker.properties
           
+          echo "server.error.whitelabel.enabled=false" >> ./src/main/resources/application-docker.properties
           echo "spring.jpa.hibernate.ddl-auto=update" >> ./src/main/resources/application-docker.properties
           echo "spring.datasource.url=jdbc:mysql://db:3306/adb-attractions-service" >> ./src/main/resources/application-docker.properties
           echo "spring.datasource.username=${{ secrets.DB_USERNAME }}" >> ./src/main/resources/application-docker.properties
