--- a/.github/workflows/main-build-test-deploy.yml
+++ b/.github/workflows/main-build-test-deploy.yml
@@ -24,7 +24,7 @@ jobs:
           mkdir -p ./src/main/resources
           touch ./src/main/resources/application-docker.properties
 
-          echo "spring.data.rest.basePath=/api/v1" >> ./src/main/resources/application-docker.properties
+          echo "server.servlet.context-path=/api/v1" >> ./src/main/resources/application-docker.properties
           echo "server.error.whitelabel.enabled=false" >> ./src/main/resources/application-docker.properties
           
           echo "spring.jpa.hibernate.ddl-auto=update" >> ./src/main/resources/application-docker.properties
